# silocore

./: .cursorrules  .env  .env.example  .gitignore  Cargo.toml  README.md  architecture.md  steps.md
sql/init/: init.sql
sql/migrations/: 20240307000001_initial_schema.sql  20240307000002_row_level_security.sql  20240307001_set_sqlx_table_owner.sql  20240307002_initial_schema.sql
src/: db.rs  main.rs  model.rs
src/auth/: auth_service.rs  mod.rs  service.rs
