[package]
name = "silocore"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = "0.7.4"
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["cors", "trace"] }
tokio = { version = "1.36.0", features = ["full"] }
hyper = "1.1.0"

# Database
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "migrate", "macros"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }

# Authentication
jsonwebtoken = "9.2.0"
argon2 = "0.5.3"

# Templating
minijinja = { version = "1.0.12", features = ["loader"] }

# Serialization
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

# Logging and error handling
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
thiserror = "1.0.57"
anyhow = "1.0.80"

# Configuration
dotenv = "0.15.0"
config = "0.13.4"

# Time handling
time = { version = "0.3.34", features = ["serde"] }
